--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ main {
 }
 
 section {
-  /* padding-top: 70px; */
   padding: 1rem;
   padding-top: 7rem;
 
@@ -35,9 +34,32 @@ html {
 a {
   text-decoration: none;
   color: inherit !important;
+  border-radius: 0.5rem;
 }
 
 a:hover {
   background-color: rgb(33, 37, 41);
-  border-radius: 0.5rem;
+}
+
+#home {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.carousel-inner {
+  display: grid;
+  justify-content: center;
+}
+
+.carousel-item{
+  padding-top: 1rem;
+  width: 60vw;
+  height: 75vh;
+  overflow: hidden;
+}
+.carousel-item img{
+  height: 100%;
+  object-fit: cover;
 }
