--- a/styles.css
+++ b/styles.css
@@ -49,17 +49,18 @@ a:hover {
 }
 
 .carousel-inner {
-  display: grid;
-  justify-content: center;
+  width: 60vw;
+  margin: auto;
 }
 
-.carousel-item{
+.carousel-item {
   padding-top: 1rem;
-  width: 60vw;
+  width: 100%;
   height: 75vh;
   overflow: hidden;
 }
-.carousel-item img{
+
+.carousel-item img {
   height: 100%;
   object-fit: cover;
 }
