carousel styling - changed arrow colors, rounded corners

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ a:hover {
 .carousel-inner {
   width: 60vw;
   margin: auto;
+  border-radius: 1rem;
 }
 
 .carousel-item {
@@ -64,3 +65,12 @@ a:hover {
   height: 100%;
   object-fit: cover;
 }
+
+/* change carousel icon color */
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+ }
+ 
+ .carousel-control-next-icon {
+   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+ }
