--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ nav {
 }
 
 .custom-navbar {
-  color: #33FF00 !important;
+  color: #33ff00 !important;
   background-color: black !important;
 }
 
@@ -28,7 +28,7 @@ body,
 html {
   font-size: 100%;
   margin: 0;
-  color: #33FF00;
+  color: #33ff00;
 }
 
 a {
@@ -69,8 +69,38 @@ a:hover {
 /* change carousel icon color */
 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
- }
- 
- .carousel-control-next-icon {
-   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
- }
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+.term-emu {
+  background: black;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 10px;
+}
+
+#about {
+  margin: 0;
+}
+
+i {
+  color: black;
+  font-size: 1.5rem;
+  background-color: #74736c;
+  padding: 0.5rem;
+  border-radius: 2rem;
+}
+
+.mock-close-button {
+  color: #E04E1B !important;
+  background-color: black;
+  font-size: 2.5rem;
+}
+
+.window-header {
+  display: inline-flex;
+  /* text-align: center; */
+}
