--- a/styles.css
+++ b/styles.css
@@ -87,12 +87,6 @@ a:hover {
   font-family: Ubuntu Mono; 
 }
 
-/* .term-pic {
-  width: 100%;
-  max-height: 75vh;
-  overflow: hidden;
-} */
-
 .term-pic {
   max-height: 75vh;
   overflow: hidden;
@@ -151,12 +145,7 @@ a:hover {
   padding: 0.5rem;
   background-color: #303234;
   border-radius: 10px 10px 0px 0px;
-
-  /* position: relative; */
   text-align: center;
-  
-  
-
 }
 
 .blink {
@@ -173,4 +162,13 @@ a:hover {
 @keyframes blinking {
   50% { opacity: 0; }
   100% { opacity: 1; }
+}
+
+#contact {
+  width: 60vw;
+  text-align: center;
+  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
