--- a/styles.css
+++ b/styles.css
@@ -172,3 +172,12 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
 }
+
+i {
+  font-size: 3rem;
+  padding: 0.5rem;
+}
+
+.email-form {
+  color: gray;
+}
